Refactor MCPRuntimeLauncher